View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027827 | Open CASCADE | OCCT:Samples | public | 2016-08-31 12:29 | 2016-12-09 16:39 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027827: Samples - fix compilation errors in XAML (UWP) sample. | ||||
Description | Sample XAML (UWP) needs to use TKIGES, TKSTEP, TKXSBase, TKSTL for successful compilation currently. It is necessary to build all possible toolkits for UWP platform. | ||||
Steps To Reproduce | • Build OCCT and XAML sample with UWP • Try to build and run XAML sample | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27827 has been created by ski. SHA-1: 0b5c7382024ae383402342fb774d011c780bc074 Detailed log of new commits: Author: ski Date: Wed Aug 31 12:35:03 2016 +0300 0027827: Samples - fix compilation errors in XAML (UWP) sample. Building of additional toolkits from DataExchange and ApplicationFramework modules was added. Error about deployment target was fixed. |
|
Dear abv, Building of additional toolkits from DataExchange and ApplicationFramework modules was added for correct compilation of XAML (UWP) sample. Also, error about deployment target was fixed by using of current target version as minimum target version for UWP sample. Please, review. |
|
Branch CR27827 has been updated forcibly by ski. SHA-1: b4eb646b88864e442f77f86e3f87d1c677354942 |
|
Branch CR27827 was rebased on issue 0027811. It contains changes to eliminate error about deployment target version. |
|
Branch CR27827 has been updated forcibly by ski. SHA-1: 3f4a35307637f021bc4efb15fe0d9871c49b68b8 |
|
Branch CR27827 has been updated by ski. SHA-1: c1347f4084c8054b5f2fe727f007c6c94bd45db0 Detailed log of new commits: Author: ski Date: Wed Aug 31 12:35:03 2016 +0300 Check of export to VRML format was added to sample XAML (UWP). |
|
Also, i have uncommented checking of export to VRML format in sample XAML (UWP) because it is possible now to built TKVRML toolkit using changes in 0027811. |
|
Branch CR27827 has been updated forcibly by ski. SHA-1: 84cefbd8fd680b07fcf1a68352a8fbdad7981fd5 |
|
Dear abv, please review. |
|
Branch CR27827 has been updated forcibly by ski. SHA-1: b5295378df1880e8c179ce3aafcb3184c4d0b6f1 |
|
Branch CR27827 reviewed without remarks, ready for testing. Note that this patch requires a patch for 0027811 and should be tested on the top of it. |
|
Branch CR27827 has been updated by ski. SHA-1: 9c5b19ffa58539e1a0cc193fe026c540a47655a3 Detailed log of new commits: Author: ski Date: Tue Sep 6 19:10:08 2016 +0300 Copy freetype.dll for correct execution of sample from Visual Studio. |
|
Branch CR27827 has been updated forcibly by ski. SHA-1: fd1263601a3aa5b838bb609ffc8b30aa2ce13b09 |
|
CR27827 was compiled on Windows 10 using Universal Windows Platform. Checked execution of Xaml sample from visual studio. Also it successfully starts after installation on PC. |
|
Branch CR27827 has been deleted by kgv. SHA-1: fd1263601a3aa5b838bb609ffc8b30aa2ce13b09 |
occt: master 1ae83f57 2016-08-31 09:35:03
Committer: bugmaster Details Diff |
0027827: Samples - fix compilation errors in XAML (UWP) sample. Error about deployment target version was fixed. Check of export to VRML format was added to sample XAML (UWP). Add freetype.dll to the sample project for correct execution of sample from Visual Studio. |
Affected Issues 0027827 |
|
mod - samples/xaml/CMakeLists.txt | Diff File | ||
mod - samples/xaml/MainPage.xaml.cpp | Diff File | ||
mod - samples/xaml/MainPage.xaml.h | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-08-31 12:29 |
|
New Issue | |
2016-08-31 12:29 |
|
Assigned To | => ski |
2016-08-31 12:30 |
|
Status | new => assigned |
2016-08-31 12:30 |
|
Summary | Samples - fix compilations errors in XAML (UWP) sample. => Samples - fix compilation errors in XAML (UWP) sample. |
2016-08-31 12:35 | git | Note Added: 0057322 | |
2016-08-31 12:37 |
|
Note Added: 0057323 | |
2016-08-31 12:37 |
|
Assigned To | ski => abv |
2016-08-31 12:37 |
|
Status | assigned => resolved |
2016-08-31 18:00 | git | Note Added: 0057361 | |
2016-08-31 18:02 |
|
Note Added: 0057362 | |
2016-08-31 18:02 |
|
Relationship added | child of 0027811 |
2016-08-31 18:05 | git | Note Added: 0057363 | |
2016-08-31 18:14 | git | Note Added: 0057365 | |
2016-08-31 18:16 |
|
Note Added: 0057366 | |
2016-08-31 18:23 | git | Note Added: 0057367 | |
2016-08-31 18:25 |
|
Note Added: 0057368 | |
2016-09-02 15:22 | git | Note Added: 0057427 | |
2016-09-02 15:25 |
|
Note Added: 0057428 | |
2016-09-02 15:25 |
|
Assigned To | abv => bugmaster |
2016-09-02 15:25 |
|
Status | resolved => reviewed |
2016-09-05 17:42 | bugmaster | Assigned To | bugmaster => ski |
2016-09-05 17:50 | apn | Assigned To | ski => apn |
2016-09-06 19:11 | git | Note Added: 0057536 | |
2016-09-07 14:31 | git | Note Added: 0057564 | |
2016-09-07 15:35 | apn | Note Added: 0057570 | |
2016-09-07 15:35 | apn | Test case number | => Not needed |
2016-09-07 15:35 | apn | Assigned To | apn => bugmaster |
2016-09-07 15:35 | apn | Status | reviewed => tested |
2016-09-09 09:40 | bugmaster | Changeset attached | => occt master 1ae83f57 |
2016-09-09 09:40 | bugmaster | Status | tested => verified |
2016-09-09 09:40 | bugmaster | Resolution | open => fixed |
2016-10-28 21:48 | git | Note Added: 0059576 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |