0027827: Samples - fix compilation errors in XAML (UWP) sample.

Error about deployment target version was fixed.
Check of export to VRML format was added to sample XAML (UWP).

Add freetype.dll to the sample project for correct execution of sample from Visual Studio.